style.css
html {
    font-size: 1.1em;
}

html, body {
    margin: 0;
    padding: 0;
    height: 100%;
    font-family: ui-sans-serif,-apple-system,system-ui,Segoe UI,Helvetica,Apple Color Emoji,Arial,sans-serif,Segoe UI Emoji,Segoe UI Symbol;
}

body {
    display: flex;
    flex-direction: column;
    align-items: center;
}

* {
    scrollbar-color: transparent transparent;
}

#title {
    font-weight: bold;
    color: grey;
    padding: 1em;
    font-size: 1.1em;
    align-self: center;
}

#content {
    height: 100%;
    width: 84ch;
    max-width: calc(100% - 2em);
    display: flex;
    flex-direction: column;
    align-items: space-between;
}

#main {
    flex: 1;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

#messages {
    width: 100%;
    display: flex;
    flex: 2;
    flex-direction: column;
    overflow-y: scroll;
    padding: 0 1em;
}

#messages:empty {
    flex: 0 0 auto;
    justify-content: center;
    align-items: center;
    padding: 1em;
}

#messages:empty:before {
    content: "Ik weet alles. Wat moet je van me?";
    justify-self: center;
    align-self: center;
    font-size: 2em;
    font-weight: 600;
    text-align: center;
}

.message {
    margin-bottom: 0.3em;
}

.message.human {
    max-width: 60ch;
    align-self: end;
    background: #f3f3f3;
    padding: 0em 1em;
    border-radius: 2em;
}

#prompt-box {
    align-self: stretch;
    border: 1px solid rgba(0, 0, 0, 0.1);
    padding: 0.5em 1em;
    border-radius: 2em;
    display: flex;
    flex-direction: row;
    justify-content: stretch;
    box-shadow: 0 9px 9px 0px rgba(0,0,0,.01),0 2px 5px 0px rgba(0,0,0,.06);
}

#prompt:focus {
    outline: none;
}

#prompt {
    flex: 2;
    width: 100%;
    font-size: 1em;
    border: none;
    margin: 0em;
}

#disclaimer {
    font-size: 0.7em;
    color: grey;
    text-align: center;
}

#disclaimer a {
    color: grey;
}

#send {
    aspect-ratio: 1;
    color: white;
    background: black;
    border: none;
    border-radius: 2em;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

#send > svg {
    height: 100%;
    width: 100%;
}

